@@ -1,32 +1,36 @@
 package com.spoons.popparazzi.moim.service;
 
-import com.spoons.popparazzi.category.dto.query.MoimCategoryRow;
-import com.spoons.popparazzi.category.repository.CategoryQueryRepository;
-import com.spoons.popparazzi.error.exception.BusinessException;
 import com.spoons.popparazzi.file.dto.query.MoimThumbTarget;
+import com.spoons.popparazzi.file.service.FileCommandService;
 import com.spoons.popparazzi.file.service.FileThumbnailService;
+import com.spoons.popparazzi.like.dto.query.LikeRankQuery;
 import com.spoons.popparazzi.like.enums.LikeType;
 import com.spoons.popparazzi.like.repository.LikeQueryRepository;
-import com.spoons.popparazzi.moim.dto.command.CreateMoimCommand;
-import com.spoons.popparazzi.moim.dto.query.hot.HotMoimRankQuery;
 import com.spoons.popparazzi.moim.dto.query.newest.NewestMoimItemQuery;
-import com.spoons.popparazzi.moim.dto.query.recommend.*;
+import com.spoons.popparazzi.moim.dto.query.recommend.MoimCategoryLinkQuery;
+import com.spoons.popparazzi.moim.dto.query.recommend.PreferredCategoryQuery;
+import com.spoons.popparazzi.moim.dto.query.recommend.PreferredSigunguQuery;
+import com.spoons.popparazzi.moim.dto.query.recommend.RecommendedMoimBaseQuery;
 import com.spoons.popparazzi.moim.dto.result.HotMoimCardResult;
 import com.spoons.popparazzi.moim.dto.result.MoimRecommendCardResult;
 import com.spoons.popparazzi.moim.dto.result.NewestMoimCardResult;
-import com.spoons.popparazzi.moim.error.MoimErrorCode;
 import com.spoons.popparazzi.moim.repository.MoimRepository;
 import com.spoons.popparazzi.moim.repository.hot.HotMoimQueryRepository;
 import com.spoons.popparazzi.moim.repository.newest.MoimQueryRepository;
 import com.spoons.popparazzi.moim.repository.recommend.MoimRecommendQueryRepository;
+import com.spoons.popparazzi.moim.service.support.MoimCardSupportService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -35,329 +39,330 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 public class MoimServiceImpl implements MoimService {
 
+    private static final int NEWEST_DEFAULT_LIMIT = 3;
+    private static final int HOT_DEFAULT_LIMIT = 10;
+    private static final int LIMIT_MAX = 50;
+
     private final MoimRepository moimRepository;
     private final MoimQueryRepository moimQueryRepository;
     private final HotMoimQueryRepository hotMoimQueryRepository;
     private final MoimRecommendQueryRepository recommendQueryRepository;
+
     private final LikeQueryRepository likeQueryRepository;
-    private final CategoryQueryRepository categoryQueryRepository;
-
-    // ✅ 썸네일 공통 서비스로 통일
+    private final MoimCardSupportService moimCardSupportService;
     private final FileThumbnailService fileThumbnailService;
+    private final FileCommandService fileCommandService;
 
-    @Override
-    public Long create(CreateMoimCommand command) {
 
-        if (command == null) {
-            throw new BusinessException(MoimErrorCode.MOIM_NOT_FOUND);
-        }
-        return null;
-    }
-
-    // 신규 모임 카드
+    // =========================
+    // 신규 모임
+    // =========================
     @Override
     public List<NewestMoimCardResult> getNewestMoimsForMain(int limit, String memberCode) {
 
-        if (limit <= 0) limit = 3;
-        if (limit > 50) limit = 50;
+        int fixedLimit = normalizeLimit(limit, NEWEST_DEFAULT_LIMIT);
 
-        var items = moimQueryRepository.findNewestForMain(PageRequest.of(0, limit));
+        List<NewestMoimItemQuery> items =
+                moimQueryRepository.findNewestForMain(PageRequest.of(0, fixedLimit));
+
         if (items.isEmpty()) return List.of();
 
-        var moimCodes = items.stream().map(NewestMoimItemQuery::moimCode).toList();
-
-        // 1️⃣ 좋아요
-        var likedSet = new HashSet<>(
-                likeQueryRepository.findLikedMoimCodes(memberCode, moimCodes)
-        );
-
-        // 2️⃣ 카테고리
-        var categoryRows = categoryQueryRepository.findMoimCategories(moimCodes);
-
-        Map<String, List<String>> categoryMap =
-                categoryRows.stream()
-                        .collect(Collectors.groupingBy(
-                                MoimCategoryRow::parentCode,
-                                Collectors.mapping(
-                                        MoimCategoryRow::categoryName,
-                                        Collectors.toList()
-                                )
-                        ));
-
-        // 3️⃣ 썸네일 (모임 → 없으면 팝업) ✅ 공통 서비스 사용
-        List<MoimThumbTarget> targets = items.stream()
-                .map(it -> new MoimThumbTarget(it.moimCode(), it.popupCode()))
-                .toList();
-
-        Map<String, String> thumbMap = fileThumbnailService.getMoimThumbsWithPopupFallback(targets);
-
-        // 4️⃣ 카드 조합
-        return items.stream()
-                .map(it -> {
-
-                    String thumb = thumbMap.get(it.moimCode());
-
-                    List<String> categories =
-                            categoryMap.getOrDefault(it.moimCode(), List.of())
-                                    .stream()
-                                    .limit(3)
-                                    .toList();
-
-                    return new NewestMoimCardResult(
-                            it.moimCode(),
-                            it.popupCode(),
-                            it.title(),
-                            it.date(),
-                            it.maxParticipants(),
-                            thumb,
-                            likedSet.contains(it.moimCode()),
-                            categories
-                    );
-                })
-                .toList();
+        return buildNewestCards(items, memberCode);
     }
 
-
-    // 핫한 모임 10위 조회
-    @Override
-    public List<HotMoimRankQuery> getHotMoimsRanks(int limit) {
-        LocalDateTime since = LocalDateTime.now().minusHours(24);
-
-        return hotMoimQueryRepository.findHotRankKeys(
-                LikeType.M,
-                since,
-                org.springframework.data.domain.PageRequest.of(0, limit)
-        );
-    }
-
-    // 핫한 모임 조회
+    // =========================
+    // 핫 모임 (오늘 00:00 기준) + 폴백(최신)
+    // =========================
     @Override
     public List<HotMoimCardResult> getHotMoimCardsForMain(int limit) {
-        LocalDateTime since = LocalDateTime.now().minusHours(24);
 
-        // 1) 랭크 TopN
-        var ranks = hotMoimQueryRepository.findHotRankKeys(
+        int fixedLimit = normalizeLimit(limit, HOT_DEFAULT_LIMIT);
+
+        LocalDateTime since = LocalDate.now().atStartOfDay();
+
+        List<LikeRankQuery> ranks = likeQueryRepository.findTopRankKeys(
                 LikeType.M,
                 since,
-                PageRequest.of(0, limit)
+                PageRequest.of(0, fixedLimit)
         );
-        if (ranks.isEmpty()) return List.of();
 
-        var mmCodes = ranks.stream().map(HotMoimRankQuery::moimCode).toList();
+        // 폴백 1: 랭킹 자체가 없으면 최신 모임으로 대체
+        if (ranks.isEmpty()) {
+            return buildLatestHotFallback(fixedLimit);
+        }
 
-        // 2) 카드 기본 정보
-        var bases = hotMoimQueryRepository.findHotCardsBase(mmCodes);
-        var baseMap = bases.stream().collect(Collectors.toMap(
-                HotMoimCardResult::moimCode,
-                it -> it
-        ));
+        List<HotMoimCardResult> hotCards = buildHotCardsFromRanks(ranks);
 
-        // 3) 썸네일 (모임 → 없으면 팝업) ✅ 공통 서비스 사용
-        List<MoimThumbTarget> targets = bases.stream()
-                .map(b -> new MoimThumbTarget(b.moimCode(), b.popupCode()))
+        // 폴백 2: 랭킹은 있는데 베이스가 비면(삭제/꼬임) 최신으로 대체
+        if (hotCards.isEmpty()) {
+            return buildLatestHotFallback(fixedLimit);
+        }
+
+        return hotCards;
+    }
+
+    // =========================
+    // 추천 모임
+    // =========================
+    @Override
+    public List<MoimRecommendCardResult> recommendForMember(String memberCode) {
+
+        List<String> sigunguPriority = recommendQueryRepository
+                .findPreferredSigunguTop(memberCode, 30, 3)
+                .stream()
+                .map(PreferredSigunguQuery::sigungu)
                 .toList();
 
-        Map<String, String> thumbMap = fileThumbnailService.getMoimThumbsWithPopupFallback(targets);
+        List<RecommendedMoimBaseQuery> candidates = sigunguPriority.isEmpty()
+                ? List.of()
+                : recommendQueryRepository.findRecommendMoimCandidates(sigunguPriority, memberCode, 20);
 
-        // 4) 랭크 순서 유지해서 최종 조립 (likeCount는 r에서 바로 씀)
+        // 폴백: 추천 후보가 없으면 최신 모임으로 대체
+        if (candidates.isEmpty()) {
+            return buildLatestRecommendFallback(memberCode, 10);
+        }
+
+        return buildRecommendCards(memberCode, sigunguPriority, candidates);
+    }
+
+    // =========================
+    // 신규 카드 조립
+    // =========================
+    private List<NewestMoimCardResult> buildNewestCards(List<NewestMoimItemQuery> items, String memberCode) {
+
+        List<String> moimCodes = items.stream()
+                .map(NewestMoimItemQuery::moimCode)
+                .toList();
+
+        Set<String> likedSet = moimCardSupportService.getLikedMoimCodes(memberCode, moimCodes);
+        Map<String, List<String>> categoryMap = moimCardSupportService.getMoimCategories(moimCodes);
+
+        Map<String, String> thumbMap = fileThumbnailService.getMoimThumbsWithPopupFallback(
+                toThumbTargets(items, NewestMoimItemQuery::moimCode, NewestMoimItemQuery::popupCode)
+        );
+
+        return items.stream()
+                .map(it -> new NewestMoimCardResult(
+                        it.moimCode(),
+                        it.popupCode(),
+                        it.title(),
+                        it.date(),
+                        it.maxParticipants(),
+                        thumbMap.get(it.moimCode()),
+                        likedSet.contains(it.moimCode()),
+                        categoryMap.getOrDefault(it.moimCode(), List.of())
+                ))
+                .toList();
+    }
+
+    // =========================
+    // 핫 카드 조립 (ranks 순서 유지)
+    // =========================
+    private List<HotMoimCardResult> buildHotCardsFromRanks(List<LikeRankQuery> ranks) {
+
+        List<String> mmCodes = ranks.stream()
+                .map(LikeRankQuery::targetCode)
+                .toList();
+
+        List<HotMoimCardResult> bases = hotMoimQueryRepository.findHotCardsBase(mmCodes);
+        if (bases.isEmpty()) return List.of();
+
+        Map<String, HotMoimCardResult> baseMap = bases.stream()
+                .collect(Collectors.toMap(HotMoimCardResult::moimCode, it -> it));
+
+        Map<String, String> thumbMap = fileThumbnailService.getMoimThumbsWithPopupFallback(
+                toThumbTargets(bases, HotMoimCardResult::moimCode, HotMoimCardResult::popupCode)
+        );
+
         return ranks.stream()
-                .map(r -> {
-                    var b = baseMap.get(r.moimCode());
-                    if (b == null) return null;
-
-                    var thumb = thumbMap.get(b.moimCode());
+                .map(rank -> {
+                    HotMoimCardResult base = baseMap.get(rank.targetCode());
+                    if (base == null) return null;
 
                     return new HotMoimCardResult(
-                            b.moimCode(),
-                            b.popupCode(),
-                            b.title(),
-                            b.date(),
-                            b.currentParticipants(),
-                            b.maxParticipants(),
-                            thumb,
-                            r.likeCount24h()
+                            base.moimCode(),
+                            base.popupCode(),
+                            base.title(),
+                            base.date(),
+                            base.currentParticipants(),
+                            base.maxParticipants(),
+                            thumbMap.get(base.moimCode()),
+                            rank.likeCountToday()
                     );
                 })
                 .filter(Objects::nonNull)
                 .toList();
     }
 
-    // 즐겨찾기 기반 모임 조회
-    @Override
-    public List<MoimRecommendCardResult> recommendForMember(String memberCode) {
+    // =========================
+    // 핫 폴백: 최신 모임을 Hot 카드 형태로 변환
+    // =========================
+    private List<HotMoimCardResult> buildLatestHotFallback(int limit) {
 
-        // 1️⃣ 선호 지역 Top3
-        List<PreferredSigunguQuery> preferredSigungu =
-                recommendQueryRepository.findPreferredSigunguTop(memberCode, 30, 3);
-
-        List<String> sigunguPriority = preferredSigungu.stream()
-                .map(PreferredSigunguQuery::sigungu)
-                .toList();
-
-        // 2️⃣ 1차 후보 모임 조회
-        List<RecommendedMoimBaseQuery> candidates = sigunguPriority.isEmpty()
-                ? List.of()
-                : recommendQueryRepository.findRecommendMoimCandidates(sigunguPriority, memberCode, 20);
-
-        // 후보가 아예 없으면 최신 fallback
-        if (candidates.isEmpty()) {
-            return buildLatestFallback(memberCode);
-        }
-
-        // 3️⃣ 유저 선호 카테고리 TopN
-        List<PreferredCategoryQuery> preferredCategories =
-                recommendQueryRepository.findPreferredCategories(memberCode, 30, 5);
-
-        Set<String> preferredCategorySet = preferredCategories.stream()
-                .map(PreferredCategoryQuery::categoryCode)
-                .collect(Collectors.toSet());
-
-        // 4️⃣ 후보 모임 코드 목록
-        List<String> moimCodes = candidates.stream()
-                .map(RecommendedMoimBaseQuery::moimCode)
-                .toList();
-
-        // 5️⃣ 후보 모임 카테고리 조회
-        List<MoimCategoryLinkQuery> moimCategories =
-                recommendQueryRepository.findMoimCategories(moimCodes);
-
-        Map<String, Set<String>> moimCategoryMap = moimCategories.stream()
-                .collect(Collectors.groupingBy(
-                        MoimCategoryLinkQuery::moimCode,
-                        Collectors.mapping(MoimCategoryLinkQuery::categoryCode, Collectors.toSet())
-                ));
-
-        // 6️⃣ 현재 인원 집계
-        List<MoimParticipantsCountQuery> participantCounts =
-                recommendQueryRepository.countApprovedParticipants(moimCodes);
-
-        Map<String, Long> participantCountMap = participantCounts.stream()
-                .collect(Collectors.toMap(
-                        MoimParticipantsCountQuery::moimCode,
-                        MoimParticipantsCountQuery::participantsCount
-                ));
-
-        // 7️⃣ 좋아요 여부 조회
-        Set<String> likedSet = new HashSet<>(
-                likeQueryRepository.findLikedMoimCodes(memberCode, moimCodes)
-        );
-
-        // 8️⃣ 추천 정렬
-        List<RecommendedMoimBaseQuery> sorted = candidates.stream()
-                .sorted((a, b) -> {
-
-                    // 지역 우선순위
-                    int regionScoreA = sigunguPriority.indexOf(a.sigungu());
-                    int regionScoreB = sigunguPriority.indexOf(b.sigungu());
-                    if (regionScoreA != regionScoreB) {
-                        return Integer.compare(regionScoreA, regionScoreB);
-                    }
-
-                    // 카테고리 겹침 점수
-                    int overlapA = calculateOverlap(a.moimCode(), moimCategoryMap, preferredCategorySet);
-                    int overlapB = calculateOverlap(b.moimCode(), moimCategoryMap, preferredCategorySet);
-                    if (overlapA != overlapB) {
-                        return Integer.compare(overlapB, overlapA);
-                    }
-
-                    // 날짜 ASC
-                    int dateCompare = a.date().compareTo(b.date());
-                    if (dateCompare != 0) return dateCompare;
-
-                    // 최신 등록 우선
-                    return b.regDt().compareTo(a.regDt());
-                })
-                .limit(10)
-                .toList();
-
-        // 9️⃣ 썸네일 (모임 → 없으면 팝업) ✅ 공통 서비스 사용
-        List<MoimThumbTarget> targets = sorted.stream()
-                .map(m -> new MoimThumbTarget(m.moimCode(), m.popupCode()))
-                .toList();
-
-        Map<String, String> thumbMap = fileThumbnailService.getMoimThumbsWithPopupFallback(targets);
-
-        // 🔟 최종 카드 반환
-        return sorted.stream()
-                .map(m -> {
-
-                    String thumb = thumbMap.get(m.moimCode());
-
-                    return new MoimRecommendCardResult(
-                            m.moimCode(),
-                            m.title(),
-                            m.date(),
-                            participantCountMap.getOrDefault(m.moimCode(), 0L).intValue(),
-                            m.maxParticipants(),
-                            thumb,
-                            likedSet.contains(m.moimCode())
-                    );
-                })
-                .toList();
-    }
-
-    // fallback
-    private List<MoimRecommendCardResult> buildLatestFallback(String memberCode) {
-
-        var latest = moimQueryRepository.findNewestForMain(PageRequest.of(0, 10));
+        List<NewestMoimItemQuery> latest = getLatestMoims(limit);
         if (latest.isEmpty()) return List.of();
 
         List<String> moimCodes = latest.stream()
                 .map(NewestMoimItemQuery::moimCode)
                 .toList();
 
-        Set<String> likedSet = new HashSet<>(
-                likeQueryRepository.findLikedMoimCodes(memberCode, moimCodes)
+        Map<String, Integer> participantMap =
+                moimCardSupportService.getParticipantCounts(moimCodes);
+
+        Map<String, String> thumbMap = fileThumbnailService.getMoimThumbsWithPopupFallback(
+                toThumbTargets(latest, NewestMoimItemQuery::moimCode, NewestMoimItemQuery::popupCode)
         );
 
-        // ✅ 썸네일 (모임 → 없으면 팝업) 공통 서비스 사용
-        List<MoimThumbTarget> targets = latest.stream()
-                .map(it -> new MoimThumbTarget(it.moimCode(), it.popupCode()))
-                .toList();
-
-        Map<String, String> thumbMap = fileThumbnailService.getMoimThumbsWithPopupFallback(targets);
-
+        // 폴백이므로 likeCountToday는 0으로
         return latest.stream()
-                .map(it -> {
-
-                    String thumb = thumbMap.get(it.moimCode());
-
-                    return new MoimRecommendCardResult(
-                            it.moimCode(),
-                            it.title(),
-                            it.date(),
-                            0,
-                            it.maxParticipants(),
-                            thumb,
-                            likedSet.contains(it.moimCode())
-                    );
-                })
+                .map(it -> new HotMoimCardResult(
+                        it.moimCode(),
+                        it.popupCode(),
+                        it.title(),
+                        it.date(),
+                        participantMap.getOrDefault(it.moimCode(), 0),
+                        it.maxParticipants(),
+                        thumbMap.get(it.moimCode()),
+                        0L
+                ))
                 .toList();
     }
 
-    private List<MoimRecommendCardResult> mergeFinal(
-            List<RecommendedMoimBaseQuery> sorted,
-            List<MoimRecommendCardResult> additional,
-            Map<String, Long> participantCountMap,
-            Set<String> likedSet
+    // =========================
+    // 추천 카드 조립
+    // =========================
+    private List<MoimRecommendCardResult> buildRecommendCards(
+            String memberCode,
+            List<String> sigunguPriority,
+            List<RecommendedMoimBaseQuery> candidates
     ) {
 
-        List<MoimRecommendCardResult> result = new ArrayList<>();
+        List<String> moimCodes = candidates.stream()
+                .map(RecommendedMoimBaseQuery::moimCode)
+                .toList();
 
-        for (var m : sorted) {
-            result.add(new MoimRecommendCardResult(
-                    m.moimCode(),
-                    m.title(),
-                    m.date(),
-                    participantCountMap.getOrDefault(m.moimCode(), 0L).intValue(),
-                    m.maxParticipants(),
-                    null,
-                    likedSet.contains(m.moimCode())
-            ));
+        Map<String, Integer> participantMap =
+                moimCardSupportService.getParticipantCounts(moimCodes);
+
+        Set<String> likedSet =
+                moimCardSupportService.getLikedMoimCodes(memberCode, moimCodes);
+
+        Set<String> preferredCategorySet = recommendQueryRepository
+                .findPreferredCategories(memberCode, 30, 5)
+                .stream()
+                .map(PreferredCategoryQuery::categoryCode)
+                .collect(Collectors.toSet());
+
+        Map<String, Set<String>> moimCategoryMap = recommendQueryRepository
+                .findMoimCategories(moimCodes)
+                .stream()
+                .collect(Collectors.groupingBy(
+                        MoimCategoryLinkQuery::moimCode,
+                        Collectors.mapping(MoimCategoryLinkQuery::categoryCode, Collectors.toSet())
+                ));
+
+        List<RecommendedMoimBaseQuery> sorted = candidates.stream()
+                .sorted((a, b) -> compareRecommend(a, b, sigunguPriority, moimCategoryMap, preferredCategorySet))
+                .limit(10)
+                .toList();
+
+        Map<String, String> thumbMap = fileThumbnailService.getMoimThumbsWithPopupFallback(
+                toThumbTargets(sorted, RecommendedMoimBaseQuery::moimCode, RecommendedMoimBaseQuery::popupCode)
+        );
+
+        return sorted.stream()
+                .map(m -> new MoimRecommendCardResult(
+                        m.moimCode(),
+                        m.title(),
+                        m.date(),
+                        participantMap.getOrDefault(m.moimCode(), 0),
+                        m.maxParticipants(),
+                        thumbMap.get(m.moimCode()),
+                        likedSet.contains(m.moimCode())
+                ))
+                .toList();
+    }
+
+    // =========================
+    // 추천 폴백: 최신 모임을 Recommend 카드 형태로 변환
+    // =========================
+    private List<MoimRecommendCardResult> buildLatestRecommendFallback(String memberCode, int limit) {
+
+        List<NewestMoimItemQuery> latest = getLatestMoims(limit);
+        if (latest.isEmpty()) return List.of();
+
+        List<String> moimCodes = latest.stream()
+                .map(NewestMoimItemQuery::moimCode)
+                .toList();
+
+        Set<String> likedSet =
+                moimCardSupportService.getLikedMoimCodes(memberCode, moimCodes);
+
+        Map<String, String> thumbMap = fileThumbnailService.getMoimThumbsWithPopupFallback(
+                toThumbTargets(latest, NewestMoimItemQuery::moimCode, NewestMoimItemQuery::popupCode)
+        );
+
+        return latest.stream()
+                .map(it -> new MoimRecommendCardResult(
+                        it.moimCode(),
+                        it.title(),
+                        it.date(),
+                        0,
+                        it.maxParticipants(),
+                        thumbMap.get(it.moimCode()),
+                        likedSet.contains(it.moimCode())
+                ))
+                .toList();
+    }
+
+    // =========================
+    // 공통: 최신 모임 N개 조회
+    // =========================
+    private List<NewestMoimItemQuery> getLatestMoims(int limit) {
+        return moimQueryRepository.findNewestForMain(PageRequest.of(0, limit));
+    }
+
+    // =========================
+    // 공통: 썸네일 타겟 생성
+    // =========================
+    private <T> List<MoimThumbTarget> toThumbTargets(
+            List<T> items,
+            java.util.function.Function<T, String> moimCodeGetter,
+            java.util.function.Function<T, String> popupCodeGetter
+    ) {
+        if (items == null || items.isEmpty()) return List.of();
+
+        return items.stream()
+                .map(it -> new MoimThumbTarget(moimCodeGetter.apply(it), popupCodeGetter.apply(it)))
+                .toList();
+    }
+
+    // =========================
+    // 추천 정렬
+    // =========================
+    private int compareRecommend(
+            RecommendedMoimBaseQuery a,
+            RecommendedMoimBaseQuery b,
+            List<String> sigunguPriority,
+            Map<String, Set<String>> moimCategoryMap,
+            Set<String> preferredCategorySet
+    ) {
+        int regionScoreA = sigunguPriority.indexOf(a.sigungu());
+        int regionScoreB = sigunguPriority.indexOf(b.sigungu());
+        if (regionScoreA != regionScoreB) {
+            return Integer.compare(regionScoreA, regionScoreB);
         }
 
-        result.addAll(additional);
-        return result;
+        int overlapA = calculateOverlap(a.moimCode(), moimCategoryMap, preferredCategorySet);
+        int overlapB = calculateOverlap(b.moimCode(), moimCategoryMap, preferredCategorySet);
+        if (overlapA != overlapB) {
+            return Integer.compare(overlapB, overlapA);
+        }
+
+        int dateCompare = a.date().compareTo(b.date());
+        if (dateCompare != 0) return dateCompare;
+
+        return b.regDt().compareTo(a.regDt());
     }
 
     private int calculateOverlap(
@@ -365,14 +370,19 @@ public class MoimServiceImpl implements MoimService {
             Map<String, Set<String>> moimCategoryMap,
             Set<String> preferredCategorySet
     ) {
-        Set<String> categories = moimCategoryMap.getOrDefault(moimCode, Collections.emptySet());
+        Set<String> categories = moimCategoryMap.getOrDefault(moimCode, Set.of());
 
         int count = 0;
-        for (String category : categories) {
-            if (preferredCategorySet.contains(category)) {
+        for (String categoryCode : categories) {
+            if (preferredCategorySet.contains(categoryCode)) {
                 count++;
             }
         }
         return count;
+    }
+
+    private int normalizeLimit(int limit, int defaultLimit) {
+        if (limit <= 0) return defaultLimit;
+        return Math.min(limit, LIMIT_MAX);
     }
 }
